Update config.yml & about.md

--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  cv               : "files/CV_Dongkeun_Kim_220411.pdf"
 
 
 # Reading Files
