--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
-#main:
-#  - title: "Publications"
-#    url: /publications/
-#
+main:
+  - title: "Publications"
+    url: /publications/
+
 #  - title: "Talks"
 #    url: /talks/
 #
@@ -14,9 +14,9 @@
 #
 #  - title: "Blog Posts"
 #    url: /year-archive/
-#
-#  - title: "CV"
-#    url: /cv/
-#
+
+  - title: "CV"
+    url: "../files/CV_Dongkeun_Kim_220411.pdf"
+
 #  - title: "Guide"
 #    url: /markdown/
