--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/dongkeun-kim-4a454819a/"
+  linkedin         : "dongkeun-kim-4a454819a"
   orcid            :
   pinterest        :
   soundcloud       :
