--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dongkeun Kim"
-  avatar           : "profile.png"
+  avatar           : "dongkeunkim.jpg"
   bio              : "Ph.D. student at Pohang University of Science and Technology (POSTECH), Department of Computer Science and Engineering"
   location         : "Pohang, South Korea"
   employer         :
